// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`The API routing process should setup the routes correctly 1`] = `
[MockFunction] {
  "calls": [
    [
      "email:smtp",
    ],
    [
      "email:display:server",
    ],
    [
      "email:display:sender",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": "email:smtp",
    },
    {
      "type": "return",
      "value": "email:display:server",
    },
    {
      "type": "return",
      "value": "email:display:sender",
    },
  ],
}
`;

exports[`The API routing process should setup the routes correctly 2`] = `[MockFunction]`;

exports[`The API routing process should setup the routes correctly 3`] = `
[MockFunction] {
  "calls": [
    [],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`The API routing process should setup the routes correctly 4`] = `
[MockFunction] {
  "calls": [
    [
      mockConstructor {},
      "email:smtp",
      "email:display:server",
      "email:display:sender",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`The API routing process should setup the routes correctly 5`] = `
[MockFunction] {
  "calls": [
    [
      {
        "name": "Dummy DB",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`The API routing process should setup the routes correctly 6`] = `
[MockFunction] {
  "calls": [
    [],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`The API routing process should setup the routes correctly 7`] = `
[MockFunction] {
  "calls": [
    [
      "/verify/:token",
      [Function],
      [Function],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`The API routing process should setup the routes correctly 8`] = `
[MockFunction] {
  "calls": [
    [
      "/roll",
      [Function],
      [Function],
      [Function],
    ],
    [
      "/register",
      [Function],
      [Function],
    ],
    [
      "/register/:token",
      [Function],
    ],
    [
      "/unregister",
      [Function],
      [Function],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`The API routing process should setup the routes correctly 9`] = `
[MockFunction] {
  "calls": [
    [
      [Function],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
